-XX:+IgnoreUnrecognizedVMOptions hides out of range VM options.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b93

      Previously, VM failed in case of improperly option and -XX:+IgnoreUnrecognizedVMOptions flag passed as options.

      Now -XX:+IgnoreUnrecognizedVMOptions hides improperly specified VM options. Example:

      JDK 9 b66:

      java -XX:MinTLABSize=0
      MinTLABSize of 0 is invalid; must be at least 1
      Error: Could not create the Java Virtual Machine.
      Error: A fatal exception has occurred. Program will exit

      The same message with -XX:+IgnoreUnrecognizedVMOptions.

      New JDK (nightly build):

      The same behavior (VM exits with error message) as in previously promoted JDK with new message:
      java -XX:-IgnoreUnrecognizedVMOptions -XX:MinTLABSize=0 -version
      size_t MinTLABSize=0 is outside the allowed range [ 1 ... 4294967295 ]
      Improperly specified VM option 'MinTLABSize=0'
      Error: Could not create the Java Virtual Machine.
      Error: A fatal exception has occurred. Program will exit.

      JDK continues to work with out-of-range message:
      java -XX:+IgnoreUnrecognizedVMOptions -XX:MinTLABSize=0 -version
      size_t MinTLABSize=0 is outside the allowed range [ 1 ... 4294967295 ]
      java version "1.9.0-internal-fastdebug"
      Java(TM) SE Runtime Environment (build 1.9.0-internal-fastdebug-20150624183527.jesper.main2rt-b00)
      Java HotSpot(TM) Server VM (build 1.9.0-internal-fastdebug-20150624183527.jesper.main2rt-b00, mixed mode)

        1. run_debug.sh
          8 kB
          Gerard Ziemski
        2. run_product.sh
          8 kB
          Gerard Ziemski
        3. run.sh
          11 kB
          Gerard Ziemski

            Assignee:
            Gerard Ziemski (Inactive)
            Reporter:
            Michail Chernov
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: