8129855: "-XX:+IgnoreUnrecognizedVMOptions" hides out of range VM options

Implement strict spec rgarding how IgnoreUnrecognizedVMOptions works, supplied with the corresponding test case.

Reviewed-by: dcubed, ddmitriev